--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "cheerio": "^0.20.0",
     "expect": "^1.20.2",
     "jsdom": "^9.2.1",
-    "mocha": "^2.5.3",
-    "mocha-jsdom": "^1.1.0",
-    "mocha-multi": "^0.9.0"
+    "mocha": "^5.2.0",
+    "mocha-jsdom": "~1.1.0",
+    "mocha-multi": "^1.0.1"
   },
   "dependencies": {
     "jquery": "^3.1.0"
